tests/enums_with_unknown_members/enums_with_unknown_members.exp
Error ------------------------------------------------------------------------------------------ unknown-members.js:30:9

Incomplete exhaustive check: the member `B` of enum `E` [1] has not been considered in check of `x`.
[invalid-exhaustive-check]

   unknown-members.js:30:9
   30| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]


Error ------------------------------------------------------------------------------------------ unknown-members.js:35:9

Missing `default` case in the check of `x`. `E` [1] has unknown members (specified using `...`) so checking it requires
the use of a `default` case to cover those members. [invalid-exhaustive-check]

   unknown-members.js:35:9
   35| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]


Error ------------------------------------------------------------------------------------------ unknown-members.js:38:8

Invalid exhaustive check: case checks for enum member `A` of `E` [1], but member `A` was already checked at case [2].
[invalid-exhaustive-check]

   unknown-members.js:38:8
   38|   case E.A: break; // Error
              ^^^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]
   unknown-members.js:36:8
   36|   case E.A: break;
              ^^^ [2]


Error ------------------------------------------------------------------------------------------ unknown-members.js:42:9

Missing `default` case in the check of `x`. `E` [1] has unknown members (specified using `...`) so checking it requires
the use of a `default` case to cover those members. [invalid-exhaustive-check]

   unknown-members.js:42:9
   42| switch (x)  { // Error
               ^

References:
   unknown-members.js:9:10
    9| const x: E = E.A;
                ^ [1]



Found 4 errors
